plugins {
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
}

group = 'com.comp4050square'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.300')
	implementation 'com.amazonaws:aws-java-sdk-s3'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'fr.inria.gforge.spoon:spoon-core:10.1.1' // not using TestParser anymore
	implementation 'org.json:json:20211205'

}

tasks.named('test') {
	useJUnitPlatform()
}
